--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ html {
 .handset {
   width: 40rem;
   height: 5rem;
-  background-color: var(--g1);
+  background-color: var(--g3);
   top: -7.2rem;
   left: -5rem;
   border-radius: 5rem;
@@ -118,4 +118,12 @@ html {
   border-radius: 5rem;
   border: 2.5rem dotted var(--g8); 
   z-index: 1;
+}
+
+.stand {
+  width: 100%;
+  height: 5rem;
+  background-color: var(--g1);
+  bottom: -5.5rem;
+  border-radius: 5rem;
 }
