--- a/style.css
+++ b/style.css
@@ -56,6 +56,22 @@ html {
   background-color: var(--g3);
   border-radius: 100rem 100rem 20rem 20rem;
   position: relative;
+  animation: telephoneAnim 4s infinite reverse;
+}
+
+@keyframes telephoneAnim {
+  0% {
+    transform: rotatez(0);
+  }
+  1%, 3%, 5%, 7%, 9% {
+    transform: rotateZ(-1deg)
+  }
+  2%, 4%, 6%, 8%, 10% {
+    transform: rotateZ(1deg)
+  }
+  11%, 100% {
+    transform: rotateZ(0);
+  }
 }
 
 .telephone > div {
