--- a/style.css
+++ b/style.css
@@ -43,14 +43,14 @@ html {
   padding: 5rem 20rem;
 }
 
-.content {
+.contact {
   width: 100%;
   height: 100%;
   background-color: var(--g11);
   border-radius: 60rem 2rem;
 }
 
-.content > div {
+.contact > div {
   flex: 1;
 }
 
@@ -189,3 +189,36 @@ textarea {
   background-color: var(--g1);
 }
 
+@media (max-width: 1650px) {
+  .container {
+    padding: 5rem;
+  }
+  .contact {
+    border-radius: 30rem 2rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container {
+    padding: 0;
+  }
+  .contact {
+    flex-direction: column-reverse;
+    border-radius: 0;
+  }
+  .telephone-wrapper {
+    margin-top: 10rem;
+  }
+}
+
+@media (max-width: 700px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 400px) {
+  html {
+    font-size: 40%;
+  }
+}
